objects/Marketing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Accel_Artwork_Theme_SCS__c</fullName>
        <description>Indented to only be used for the Standard Custom Size record type</description>
        <label>Accel Artwork Theme (SCS)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>$$$ Reels with Cash</fullName>
                </value>
                <value>
                    <fullName>Vegas - $$$ Reels, Cards, Poker Chips</fullName>
                </value>
                <value>
                    <fullName>Vegas Skyline (Black &amp; White)</fullName>
                </value>
                <value>
                    <fullName>Vegas Skyline (Color)</fullName>
                </value>
                <value>
                    <fullName>New Vegas – 777 Reels, Cards, Poker Chips</fullName>
                </value>
                <value>
                    <fullName>Neon Lights – 777 Reels, Cards, Wheel</fullName>
                </value>
                <value>
                    <fullName>Neon Sign on Brick Wall</fullName>
                </value>
                <value>
                    <fullName>VGT Lineup (Color)</fullName>
                </value>
                <value>
                    <fullName>VGT Lineup (Black &amp; White)</fullName>
                </value>
                <value>
                    <fullName>VGT with Cash (Black &amp; White)</fullName>
                </value>
                <value>
                    <fullName>Gaming – Reels, Cards, Wheel (Black &amp; White)</fullName>
                </value>
                <value>
                    <fullName>Midnight Lights with 777 Reels (Black &amp; White)</fullName>
                </value>
                <value>
                    <fullName>Cosmic Reels</fullName>
                </value>
                <value>
                    <fullName>Diamond in the Rough</fullName>
                </value>
                <value>
                    <fullName>Retro Gaming</fullName>
                </value>
                <value>
                    <fullName>Logo Gaming</fullName>
                </value>
                <value>
                    <fullName>Vintage Gaming</fullName>
                </value>
                <value>
                    <fullName>Old Vegas</fullName>
                </value>
                <value>
                    <fullName>Video Poker</fullName>
                </value>
                <value>
                    <fullName>Frosted – Half Solid Wall</fullName>
                </value>
                <value>
                    <fullName>Frosted – Diamonds</fullName>
                </value>
                <value>
                    <fullName>Frosted – Diagonal Stripes – Thin</fullName>
                </value>
                <value>
                    <fullName>Frosted – Diagonal Stripes – Thick</fullName>
                </value>
                <value>
                    <fullName>Frosted – Suites</fullName>
                </value>
                <value>
                    <fullName>Frosted – Reels</fullName>
                </value>
                <value>
                    <fullName>Frosted - Honeycomb</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accel_Payment_Percentage__c</fullName>
        <formula>Requested_Reimbursement_Amount__c / Total_Quote_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Payment Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accel_Portion_of_Cost_Share__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the amount of the Total Cost Share that Accel is to pay.</inlineHelpText>
        <label>Accel Portion of Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accel_Product__c</fullName>
        <label>Accel Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Punch Cards</fullName>
                </value>
                <value>
                    <fullName>Vouchers</fullName>
                </value>
                <value>
                    <fullName>Promotional Giveaway Posters</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accel_Tag_Line__c</fullName>
        <label>Accel Tag Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Play Slots</fullName>
                </value>
                <value>
                    <fullName>Hit the Jackpot</fullName>
                </value>
                <value>
                    <fullName>Must be 21 or Older to Enter</fullName>
                </value>
                <value>
                    <fullName>Private Gaming Room</fullName>
                </value>
                <value>
                    <fullName>24 Hour Gaming</fullName>
                </value>
                <value>
                    <fullName>Big Jackpot Won Here</fullName>
                </value>
                <value>
                    <fullName>Must be 19 or Older to Enter</fullName>
                </value>
                <value>
                    <fullName>Play Skill Games</fullName>
                </value>
                <value>
                    <fullName>Play to Win Cash</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accel_s_Customized_Printed_Collateral__c</fullName>
        <label>Accel&apos;s Customized Printed Collateral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic - Promotional Posters (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Spring – Promotional Posters (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Summer – Promotional Posters (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Autumn – Promotional Posters (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Winter – Promotional Posters (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Accel’s Quick Promo Picks Posters (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Accel’s Quick Promo Picks Scratch Off Cards (50/50 Split)</fullName>
                </value>
                <value>
                    <fullName>Accel’s Quick Promo Picks Punch Cards (50/50 Split)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Budget_Indicator__c</fullName>
        <formula>Account__r.Budget_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Budget Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>text(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Requests (Account)</relationshipLabel>
        <relationshipName>Dayna_Marketing_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Run_End_Date__c</fullName>
        <label>Actual Run End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Run_Start_Date__c</fullName>
        <label>Actual Run Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdditionalBrandAmbassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Brand Ambassador</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Requests (Additional Brand Ambassador)</relationshipLabel>
        <relationshipName>Marketing_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustments_Notes__c</fullName>
        <label>ALE Loc Adjustment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Items_Ready_for_Pickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Items Ready for Pickup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_By_Accel__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won_Graphic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount Won Graphic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Co_Op_Budget__c</fullName>
        <formula>Account__r.Annual_Co_Op_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Co-Op Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approvals_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approvals Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>April__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>April</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Art_Approval_TAT__c</fullName>
        <formula>Date_of_Art_Approval__c-Date_Sent_for_Art_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Art Approval TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Art_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Art Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dayna_Marketing_Tests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Artwork_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork_Due_Date__c</fullName>
        <label>Artwork Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Height_in_inches__c</fullName>
        <label>Artwork Height (in inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Artwork_Width__c</fullName>
        <label>Artwork Width (inches)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Brand_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Brand Ambassador</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_RequestsmlaZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Digital_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Digital Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_RequestsmiDy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Email_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Email Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_RequestsmiE8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Marketing_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Marketing Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dayna_Marketing_Tests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>August__c</fullName>
        <defaultValue>&quot;Opt Out&quot;</defaultValue>
        <label>August</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_and_Tier_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Azure_External_Id__c</fullName>
        <description>Identifier for linking to Azure data warehouse</description>
        <externalId>true</externalId>
        <label>Azure External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Month__c</fullName>
        <label>Billing Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Start_Year__c</fullName>
        <label>Billing Start Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                    <isActive>false</isActive>
                    <label>2020</label>
                </value>
                <value>
                    <fullName>2021</fullName>
                    <isActive>false</isActive>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>2022</fullName>
                    <isActive>false</isActive>
                    <label>2022</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Ambassador_Status__c</fullName>
        <label>Brand Ambassador Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information Stage</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Event Setup</fullName>
                </value>
                <value>
                    <fullName>Post-Event Data</fullName>
                </value>
                <value>
                    <fullName>Event Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Ambassador</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Requests (Brand Ambassador)</relationshipLabel>
        <relationshipName>Marketing_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenges_to_Installation__c</fullName>
        <inlineHelpText>Are there any reason why installation in this location will be challenging (furniture in the way, thin walls, thing already on wall, wall made of something other than drywall---like concrete or glass, etc)?</inlineHelpText>
        <label>Challenges to Installation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chromebit_Serial_Number__c</fullName>
        <label>Chromebit Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op_Budget__c</fullName>
        <formula>IF(
AND(
TEXT(Include_in_Co_Op_Budget__c)=&apos;TRUE&apos;,  
RecordType.Name=&apos;Co-Op&apos;
),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Op Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Op_Project_Stages__c</fullName>
        <label>Co-Op Project Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Pending Invoice</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Quantity__c</fullName>
        <label>Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 Posters - $40/$20</fullName>
                </value>
                <value>
                    <fullName>10 Posters - $45/$22.50</fullName>
                </value>
                <value>
                    <fullName>200 Scratch Off Cards - $230/$115</fullName>
                </value>
                <value>
                    <fullName>400 Scratch Off Cards - $375/187.50</fullName>
                </value>
                <value>
                    <fullName>500 Punch Cards - $69/34.50</fullName>
                </value>
                <value>
                    <fullName>500 Scratch Off Tickets - $94/$47</fullName>
                </value>
                <value>
                    <fullName>1000 Scratch Off Cards - $630/$315</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>10 Posters - $39/$19.50</fullName>
                    <isActive>false</isActive>
                    <label>10 Posters - $39/$19.50</label>
                </value>
                <value>
                    <fullName>5 Posters - $37/$18.50</fullName>
                    <isActive>false</isActive>
                    <label>5 Posters - $37/$18.50</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Approver 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Requests (Compliance Approver 1)</relationshipLabel>
        <relationshipName>Marketing_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Compliance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dayna_Marketing_Tests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Artwork_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Artwork Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Artwork_Compliance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Artwork Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Denial_Reason__c</fullName>
        <label>Compliance Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_TAT__c</fullName>
        <formula>Date_Compliance_Approval_Rcvd__c- Date_Sent_For_Compliance_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chromebit Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Note__c</fullName>
        <label>Content Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Approval_TAT__c</fullName>
        <formula>Date_Cost_Approval_Received__c-Date_Sent_For_Cost_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Approval TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Approval__c</fullName>
        <label>Cost Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Approved</fullName>
                </value>
                <value>
                    <fullName>Cost Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dayna_Marketing_Tests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Sent_To_Accounting__c</fullName>
        <label>Cost Share Sent To Accounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_approval_yes_no__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Beacon_in_ALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Beacon in ALE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Size__c</fullName>
        <label>Custom Size?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA_Address__c</fullName>
        <label>DBA Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Accounting_Approval_Rcvd__c</fullName>
        <label>Date Accounting Approval Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Accounting_Approves_Opt_Out__c</fullName>
        <label>Date Accounting Approves Opt Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Added_to_Calendar_of_Events__c</fullName>
        <label>Date Added to Calendar of Events</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ambassador_Event_Scheduled__c</fullName>
        <label>Date Ambassador Event Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved_By_Emily__c</fullName>
        <label>Date Approved By Emily</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Check_Issued__c</fullName>
        <label>Date Check Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Chromebit_Is_Set_Up__c</fullName>
        <label>Date Chromebit Is Set Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Compliance_Approval_Rcvd__c</fullName>
        <label>Date of Final Compliance Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cost_Approval_Received__c</fullName>
        <label>Date Cost Approval Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cost_Share_Received__c</fullName>
        <label>Date Cost Share Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Disclaimers_Pulled_from_File_Sectn__c</fullName>
        <description>Date Disclaimers Pulled from File Section</description>
        <inlineHelpText>Date Disclaimers Pulled from File Section</inlineHelpText>
        <label>Date Disclaimers Pulled from File Sectn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Email_Approved__c</fullName>
        <label>Date Email Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Email_Text_Approved__c</fullName>
        <label>Date Email/Text Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Event_Notification_Sent_to_Ambassad__c</fullName>
        <label>Date Event Notification Sent to Ambassad</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Feedback_and_Results_Sent_to_RM__c</fullName>
        <label>Date Feedback and Results Sent to RM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Letter_Agreement_Uploaded__c</fullName>
        <label>Date Letter Agreement Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Location_Opts_Out__c</fullName>
        <label>Date Location Opts Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Marketing_Manager_Approval_Rcvd__c</fullName>
        <label>Date Marketing Manager Approval Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ordered_From_Vendor__c</fullName>
        <label>Date Ordered From Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Players_Pulled_From_ALE__c</fullName>
        <label>Date Players Pulled From ALE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Promo_Posters_Sent_to_Location__c</fullName>
        <label>Date Promo Posters Sent to Location</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proofreader_Approval_Rcvd__c</fullName>
        <label>Date Proofreader Approval Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Quote_1_Finalized__c</fullName>
        <label>Date Quote Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Quote_2_Finalized__c</fullName>
        <label>Date Quote 2 Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rcvd_From_Vendor__c</fullName>
        <label>Date Rcvd From Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_From_Content_Coordinator__c</fullName>
        <label>Date Received From Content Coordinator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Regional_Lead_Approval_Received__c</fullName>
        <label>Date Regional Lead Approval Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned_From_Graphic_Designer__c</fullName>
        <label>Date Returned From Graphic Designer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_For_Compliance_Approval__c</fullName>
        <label>Date Sent For Final Compliance Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_For_Cost_Approval__c</fullName>
        <label>Date Sent For Cost Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_For_Cost_Share__c</fullName>
        <label>Date Sent For Cost Share</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_For_Location_Approval__c</fullName>
        <label>Date Sent For Location Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_To_Emily__c</fullName>
        <label>Date Sent To Emily</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Art_Approval__c</fullName>
        <label>Date Sent for Art Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Email_Text_Approval__c</fullName>
        <label>Date Sent for Email/Text Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Marketing_Manager_Approval__c</fullName>
        <label>Date Sent for Marketing Manager Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Proofread__c</fullName>
        <label>Date Sent for Proofread</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Quote_1__c</fullName>
        <label>Date Sent for Quote</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Quote_2__c</fullName>
        <label>Date Sent for Quote #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Regional_Lead_Approval__c</fullName>
        <label>Date Sent for Regional Lead Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Accounting__c</fullName>
        <label>Date Sent to Accounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Compliance_Approver_1__c</fullName>
        <label>Date Sent to Compliance Approver 1</label>
        <type>Date</type>
    </fields>
</CustomObject>